--- a/popup.html
+++ b/popup.html
@@ -29,36 +29,111 @@
             width: 80px;
         }
         select {
-            width: 200px;
+            width: 100%;
         }
         .input-row {
             margin-bottom: 24px;
+            display: grid;;
+            gap:10px;
+            grid-template-columns: 25% 25% 50%;
+            
+
         }
         .input-group {
             display: flex;
             gap: 12px;
             align-items: center;
         }
-        button {
+        .button {
             width: 100%;
-            padding: 10px;
-            background: #23B2CE;
-            color: white;
+            padding: 12px;
             border: none;
             border-radius: 4px;
+            background-color: #2c396a;
+            color: white;
             cursor: pointer;
             font-size: 14px;
             font-weight: 500;
+            transition: background-color 0.2s;
         }
-        button:hover {
-            background: #1C8FA6;
+        .button:hover {
+            background-color: #364584;
+        }
+        .button:active {
+            background-color: #243055;
+        }
+        .button:disabled {
+            background-color: #9ea3b8;
+            cursor: not-allowed;
         }
         #status {
-            margin-top: 10px;
-            color: #666;
+            margin: 16px 0;
+            padding: 12px;
+            border-radius: 4px;
+            text-align: center;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            font-weight: 500;
         }
-        #api-token {
+        #status.success {
+            background-color: #e3fcef;
+            color: #0c6b58;
+            border: 1px solid #0c6b58;
+        }
+        #status.error {
+            background-color: #fbe9e7;
+            color: #c62828;
+            border: 1px solid #c62828;
+        }
+        #status.success::before {
+            content: '✓';
+            font-weight: bold;
+            font-size: 16px;
+        }
+        #status.error::before {
+            content: '!';
+            font-weight: bold;
+            font-size: 16px;
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+            text-align: center;
+            border-radius: 50%;
+            border: 2px solid currentColor;
+        }
+        .fade-out {
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        #save-settings {
+            position: relative;
+            overflow: hidden;
+        }
+        #save-settings.saving {
+            background-color: #ccc;
+            pointer-events: none;
+        }
+        #save-settings.saving::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                90deg,
+                transparent,
+                rgba(255, 255, 255, 0.3),
+                transparent
+            );
+            animation: loading 1s infinite;
+        }
+        @keyframes loading {
+            from { transform: translateX(-100%); }
+            to { transform: translateX(100%); }
         }
     </style>
 </head>
@@ -69,7 +144,7 @@
         <div class="input-row">
             <label for="api-token">API Token</label>
             <input type="password" id="api-token" placeholder="Enter YNAB API Token">
-            <button id="connect-button">Connect</button>
+            <button id="connect-button" class="button">Connect</button>
         </div>
         <div id="status"></div>
     </div>
@@ -78,43 +153,39 @@
     <div id="settings-section" class="hidden">
         <h2>Profit First Settings</h2>
         
-        <!-- Owner's Pay -->
         <div class="input-row">
-            <label>Owner's Pay</label>
-            <div class="input-group">
-                <input type="number" id="owner-pay" placeholder="%" value="50">
-                <select id="owner-pay-category"></select>
-            </div>
+            <label for="tax">Tax (%):</label>
+            <input type="number" id="tax" min="0" max="100" required>
+            <select id="tax-category" required>
+                <option value="">Select category...</option>
+            </select>
         </div>
 
-        <!-- Tax -->
         <div class="input-row">
-            <label>Tax</label>
-            <div class="input-group">
-                <input type="number" id="tax" placeholder="%" value="15">
-                <select id="tax-category"></select>
-            </div>
+            <label for="owner-pay">Owner's Pay (%):</label>
+            <input type="number" id="owner-pay" min="0" max="100" required>
+            <select id="owner-pay-category" required>
+                <option value="">Select category...</option>
+            </select>
         </div>
 
-        <!-- Operating Expenses -->
         <div class="input-row">
-            <label>Operating Expenses</label>
-            <div class="input-group">
-                <input type="number" id="opex" placeholder="%" value="30">
-                <select id="opex-category"></select>
-            </div>
+            <label for="opex">Operations (%):</label>
+            <input type="number" id="opex" min="0" max="100" required>
+            <select id="opex-category" required>
+                <option value="">Select category...</option>
+            </select>
         </div>
 
-        <!-- Profit -->
         <div class="input-row">
-            <label>Profit</label>
-            <div class="input-group">
-                <input type="number" id="profit" placeholder="%" value="5">
-                <select id="profit-category"></select>
-            </div>
+            <label for="profit">Profit (%):</label>
+            <input type="number" id="profit" min="0" max="100" required>
+            <select id="profit-category" required>
+                <option value="">Select category...</option>
+            </select>
         </div>
 
-        <button id="save-settings">Save Settings</button>
+        <button id="save-settings" class="button">Save Settings</button>
     </div>
     <script src="popup.js"></script>
 </body>
