feat: improve UI and add percentage validation
- Add dropdown arrow to Profit First button
- Improve settings form layout
- Add Three Acres credit
- Add validation to ensure percentages total 100%
- Show specific error message with actual total

--- a/popup.html
+++ b/popup.html
@@ -137,6 +137,11 @@
             from { transform: translateX(-100%); }
             to { transform: translateX(100%); }
         }
+
+        .credits {
+            text-align: right;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -189,6 +194,9 @@
 
         <button id="save-settings" class="button">Save Settings</button>
     </div>
+    <div class="credits">
+    <small>Created By: <a target="_blank" href="https://threeacres.ca">Three Acres</a></small>
+</div>
     <script src="popup.js"></script>
 </body>
 </html>
